tests/bad/bad016.lat
// passing integers to printString().

int main() {
	printString(1);
	return 0 ;
}
